--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -37,3 +37,146 @@ input [type= "submit"]{
     color: white;
     font-weight: bold;
 }
+
+/* ESTILOS DEL LOGIN Y REGISTRO*/
+
+.login{
+    background-image: url(../img/ab39a576-c559-43d4-9dd6-947bf6d8795d.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    overflow-x: hidden;
+}
+
+main{
+    width: 100%;
+    padding: 20px;
+    margin: auto;
+    margin-top: 100px;
+}
+
+.container__todo{
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+    position: relative;
+}
+
+.login__caja{
+    width: 100%;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: center;
+    backdrop-filter: blur(10px);
+    background-color: rgba(0, 128, 255, 0.5);
+}
+
+.login__caja div{
+    margin: 100px 40px;
+    color: white;
+    transition: all 500ms;
+}
+
+.login__caja div p,
+.login__caja div button{
+    margin-top: 10px;
+}
+
+.login__caja div h3{
+    font-weight: 400;
+    font-size: 26px;
+}
+.login__caja button{
+    padding: 10px 40px;
+    border: 2px solid #fff;
+    background: transparent;
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+    color: white;
+    outline: none;
+    transition: all 300ms;
+}
+.login__caja button:hover{
+    background: #fff;
+    color: #46a2fe;
+}
+
+.contenedor__form{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 380px;
+    position: relative;
+    top: -185px;
+    left: 10px;
+    transition: left 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
+}
+.contenedor__form form{
+    width: 100%;
+    padding: 80px 20px;
+    background: #fff;
+    position: absolute;
+    border-radius: 20px;
+}
+.contenedor__form form h2{
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #46a2fe;
+}
+.contenedor__form form input{
+    width: 100%;
+    margin-top: 20px;
+    padding: 10px;
+    border: none;
+    background: #F2F2F2;
+    font-size: 16px;
+    outline: none;
+}
+.contenedor__form form button{
+    padding: 10px 40px;
+    margin-top: 40px;
+    border: none;
+    font-size: 14px;
+    background: #46a2fd;
+    color: white;
+    cursor: pointer;
+    outline: none;
+}
+
+.form__login{
+    opacity: 1;
+    display: block;
+}
+.form__registro{
+    display: none;
+}
+
+/*DISEÑO RESPONSIVE*/ 
+
+@media screen and (max-width: 850px) {
+    main{
+        margin-top: 50px;
+    }
+    .login__caja{
+        max-width: 350px;
+        height: 300px;
+        flex-direction: column;
+        margin: auto;
+    }
+    .login__caja div{
+        margin: 0px;
+        position: absolute;
+    }
+    .contenedor__form{
+        top: -10px;
+        left: -5px;
+        margin: auto;
+    }
+    .contenedor__form form{
+        position: relative;
+    }
+    
+}
